--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>computer architecture </h1>
 <h2> Links: </h2>
         <ul>
-            <li><a href="main page.html">Main page</a>></li>
+            <li><a href="index.html">Main page</a>></li>
             <li><a href="Introduction to computre architecture.html">Introduction to computer architecture</a></li>
             <li><a href="brief history of computer architecture.html">Brief history of computer architecture</a></li>
             <li><a href="types of computer architecture.html">types of computer architecture</a></li>
